# 7cudow

./: .gitignore  CMakeCache.txt  CMakeLists.txt  ExampleProject  Makefile  bitbucket-pipelines.yml  cat.gitignore  cmake_install.cmake  main.cpp  main.cpp~  testy.cpp~
src/: CMakeLists.txt  CMakeLists.txt~  GoldenCard.cpp  GoldenCard.hpp  GoldenCardType.hpp  Gracz.cpp  Gracz.cpp~  Gracz.hpp  Gracz.hpp~  Guild.cpp  Guild.hpp  Makefile  cmake_install.cmake  symbol.h  wonder.cpp  wonder.hpp
test/: CMakeLists.txt  CMakeLists.txt~  ExampleProject_test  ExampleTest.cpp  ExampleTest.cpp~  MainForTests.cpp  MainForTests.cpp~  Makefile  cmake_install.cmake
